[package]
name = "peep"
version = "0.1.0"
edition = "2024"

[dependencies]
bootstrap_client = { path = "../bootstrap/client" }
bootstrap_common = { path = "../bootstrap/common" }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
local-ip-address = "0.6.5"